// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Application should not fail if current route does not exist 1`] = `
<div>
  <header
    class="toolbar"
  >
    <nav>
      <div
        class="controlsLeft"
      />
      <div
        class="controlsRight"
      />
    </nav>
  </header>
  <main
    class="main"
  />
  <aside />
</div>
`;

exports[`Application should render based on current route 1`] = `
<div>
  <header
    class="toolbar"
  >
    <nav>
      <div
        class="controlsLeft"
      />
      <div
        class="controlsRight"
      />
    </nav>
  </header>
  <main
    class="main"
  >
    <h1>
      Test
    </h1>
  </main>
  <aside />
</div>
`;
